--- a/README.me
+++ b/README.me
@@ -4,6 +4,6 @@ Estimate of time needed to complete: 120min Start time: 1655 Finish time: 2100
 
 Actual time needed to complete: 245 min
 
-I built a web application that greets users, converts text to uppercase, and shows details about music albums. We designed it to display the album data using predefined details for each album.
+I built a web application that greets users, converts text to uppercase, and shows details about music albums. I designed it to display the album data using predefined details for each album.
 
 Resources: ChatGPT and TA Tony and reviewing our Lab 11 instruction video. 
