--- a/README.me
+++ b/README.me
@@ -7,3 +7,13 @@ Actual time needed to complete: 245 min
 I built a web application that greets users, converts text to uppercase, and shows details about music albums. I designed it to display the album data using predefined details for each album.
 
 Resources: ChatGPT and TA Tony and reviewing our Lab 11 instruction video. 
+
+Name of feature: Spring RESTful Routing
+
+Estimate of time needed to complete: 120min Start time: 1655 Finish time: 2300
+
+Actual time needed to complete: 500min
+
+In this project, I built a web application using Spring Boot and Java, which allows users to view and add album information. 
+
+Resources: ChatGPT and TA Tony and reviewing our Lab 12 instruction video. 
