--- a/README.me
+++ b/README.me
@@ -17,3 +17,15 @@ Actual time needed to complete: 500min
 In this project, I built a web application using Spring Boot and Java, which allows users to view and add album information. 
 
 Resources: ChatGPT and TA Tony and reviewing our Lab 12 instruction video. 
+
+
+Name of feature: Related Resources and Integration Testing
+
+Estimate of time needed to complete: 120min Start time: 1655 Finish time: 2300
+
+Actual time needed to complete: 260min
+
+I greated a web application using Spring Boot to create a music album system, with functionality for adding and viewing albums, and adding songs to those albums.
+
+Resources: ChatGPT and TA Tony and reviewing our Lab 13 instruction video. 
+
